--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" />
 		<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 		<style>
+			*{
+				justify-content:center;
+				align-item:center;
+			}
 			#response {
 				margin-top: 20px;
 				padding: 10px;
@@ -57,7 +61,7 @@
 						{
 							method: 'POST',
 							headers: {
-								Authorization: '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',
+								Authorization: 'Bearer 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',
 								'HTTP-Referer': 'https://nasirsworld.github.io/DeepOpen/',
 								'X-Title': 'DeepOpen',
 								'Content-Type': 'application/json',
